--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/compression": "^1.0.1",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "response-time": "^2.3.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/request-promise": "^4.1.45",
     "@types/response-time": "^2.3.4"
   }
