--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "response-time": "^2.3.2"
@@ -23,6 +24,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/mongoose": "^5.7.0",
     "@types/request-promise": "^4.1.45",
     "@types/response-time": "^2.3.4"
   }
